--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -1,18 +1,264 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WeatherActivity">
+    tools:context=".WeatherActivity"
+    android:orientation="vertical"
+    android:layout_margin="16dp"
+    android:gravity="center"
+    android:animateLayoutChanges="true">
+
   <TextView
+      android:id="@+id/weather_locationTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Hello weather!"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"/>
+      tools:text="Bandung, Indonesia"
+      android:textAppearance="?textAppearanceHeadline4"
+      android:layout_margin="8dp"
+      android:visibility="gone"
+      tools:visibility="visible"
+  />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+  <androidx.cardview.widget.CardView
+      xmlns:card_view="http://schemas.android.com/apk/res-auto"
+      android:id="@+id/card_view"
+      android:layout_gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:minHeight="128dp"
+      card_view:cardBackgroundColor="?colorPrimary"
+      card_view:cardCornerRadius="16dp"
+      android:layout_margin="16dp"
+  >
+
+    <ProgressBar
+        android:id="@+id/weather_progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+    />
+
+    <LinearLayout
+        android:id="@+id/weather_condition"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+    >
+
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:gravity="center"
+          android:orientation="vertical"
+          android:layout_margin="16dp">
+
+        <ImageView
+            android:id="@+id/weather_conditionIcon"
+            tools:src="@drawable/ic_weather_8xx"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:tint="?colorOnPrimary"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/weather_conditionTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Heavy Rain"
+            android:textColor="?colorOnPrimary"
+            android:textAppearance="?textAppearanceHeadline5"
+            android:layout_gravity="center"/>
+
+
+        <TextView
+            android:id="@+id/weather_conditionDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Sunday, 02 Oct"
+            android:textColor="?colorOnPrimary"
+            android:textAppearance="?textAppearanceSubtitle1"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/weather_conditionTemperature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="24°"
+            android:textColor="?colorOnPrimary"
+            android:textAppearance="?textAppearanceHeadline1"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"/>
+      </LinearLayout>
+
+      <GridLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:rowCount="2"
+          android:columnCount="2">
+
+        <LinearLayout
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:background="@drawable/border"
+            android:orientation="horizontal"
+        >
+
+          <ImageView
+              android:src="@drawable/ic_weather_wind"
+              android:layout_width="64dp"
+              android:layout_height="64dp"
+              app:tint="?colorOnPrimary"
+          />
+
+          <LinearLayout
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:orientation="vertical"
+              android:layout_gravity="center_vertical">
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/weather_wind"
+                android:textColor="?colorOnPrimary"
+                android:textAppearance="?textAppearanceOverline"/>
+
+            <TextView
+                android:id="@+id/weather_windSpeed"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                tools:text="19.2km/j"
+                android:textColor="?colorOnPrimary"
+                android:textAppearance="?textAppearanceBody1"/>
+
+          </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:background="@drawable/border"
+            android:orientation="horizontal"
+        >
+
+          <ImageView
+              android:src="@drawable/ic_weather_feels_like"
+              android:layout_width="64dp"
+              android:layout_height="64dp"
+              app:tint="?colorOnPrimary"
+          />
+
+          <LinearLayout
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:orientation="vertical"
+              android:layout_gravity="center_vertical">
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/weather_feels_like"
+                android:textColor="?colorOnPrimary"
+                android:textAppearance="?textAppearanceOverline"/>
+
+            <TextView
+                android:id="@+id/weather_feelsLike"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                tools:text="25°"
+                android:textColor="?colorOnPrimary"
+                android:textAppearance="?textAppearanceBody1"/>
+
+          </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:background="@drawable/border"
+            android:orientation="horizontal"
+        >
+
+          <ImageView
+              android:src="@drawable/ic_weather_humidity"
+              android:layout_width="64dp"
+              android:layout_height="64dp"
+              app:tint="?colorOnPrimary"
+          />
+
+          <LinearLayout
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:orientation="vertical"
+              android:layout_gravity="center_vertical">
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/weather_humidity"
+                android:textColor="?colorOnPrimary"
+                android:textAppearance="?textAppearanceOverline"/>
+
+            <TextView
+                android:id="@+id/weather_humidity"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                tools:text="2 %"
+                android:textColor="?colorOnPrimary"
+                android:textAppearance="?textAppearanceBody1"/>
+
+          </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:background="@drawable/border"
+            android:orientation="horizontal"
+        >
+
+          <ImageView
+              android:src="@drawable/ic_weather_pressure"
+              android:layout_width="64dp"
+              android:layout_height="64dp"
+              app:tint="?colorOnPrimary"
+          />
+
+          <LinearLayout
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:orientation="vertical"
+              android:layout_gravity="center_vertical">
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/weather_pressure"
+                android:textColor="?colorOnPrimary"
+                android:textAppearance="?textAppearanceOverline"/>
+
+            <TextView
+                android:id="@+id/weather_pressure"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                tools:text="1014 mbar"
+                android:textColor="?colorOnPrimary"
+                android:textAppearance="?textAppearanceBody1"/>
+
+          </LinearLayout>
+
+        </LinearLayout>
+
+      </GridLayout>
+
+    </LinearLayout>
+
+  </androidx.cardview.widget.CardView>
+
+</LinearLayout>
